services/app-web/src/components/Header/Header.module.scss
//stylelint-disable selector-pseudo-class-no-unknown
@use '../../styles/custom.scss' as custom;
@use '../../styles/uswdsImports.scss' as uswds;

// This is to override all the styles in USWDS classes.
@mixin override-uswds-nav {
    font-weight: uswds.font-weight('light') !important;
    font-size: 1rem !important;
    line-height: 1.15rem !important;
    color: custom.$mcr-foundation-white;
}

// Override the USWDS classes to match our own styling.
.primaryNav {
    background-color: transparent !important;

    button {
        padding-top: 0 !important;
        padding-bottom: 0 !important;
        padding-left: 0 !important;
        background-color: custom.$mcr-cmsblue-base !important;

        &:hover {
            color: custom.$mcr-foundation-white !important;
        }
        span::after {
            background-color: white !important;
        }
    }

    ul {
        li > * {
            @include override-uswds-nav;
        }
    }
}

.headerItemsContainer {
    display: flex;
    flex-wrap: wrap;
    @include override-uswds-nav;

    a {
        text-decoration: underline !important;
        color: custom.$mcr-foundation-white !important;
        padding: 0 !important;
        &:hover,
        &:active,
        &:visited {
            color: custom.$mcr-foundation-white !important;
            background-color: transparent !important;
        }
    }
}

.subMenuContainer {
    position: relative;
    margin-bottom: 0 !important;

    ul {
        position: absolute !important;
        right: 0 !important;
        margin-top: 1.5rem !important;
        width: fit-content;
        background-color: custom.$mcr-cmsblue-base !important;

        > li {
            & + li {
                margin-top: 1.3rem !important;
            }
        }
    }
}

.signOutButton {
    text-decoration: underline !important;
}

.divider {
    padding: 0 1rem;
    color: custom.$mcr-foundation-white;
}

.loggedOutSignInButton {
    margin-right: 1rem !important;
}

@include uswds.at-media-max('desktop') {
    .loggedOutSignInButton {
        margin-right: 1rem !important;
    }
}

@include uswds.at-media-max('tablet') {
    .loggedOutSignInButton {
        display: inline-flex !important;
        flex: 0 0 auto;
        width: auto !important;
        margin-left: auto;
    }
}

@media (max-width: 422px) {
    .loggedOutSignInButton {
        transform: translateY(-0.5rem);
    }
}

@include uswds.at-media-max('desktop') {
    .divider {
        position: absolute;
        display: none;
    }

    .headerItemsContainer {
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
        justify-content: space-between;
        padding-top: 1rem;
        padding-bottom: 1rem;
        li {
            border-top: none !important;
            margin-top: 1rem;
        }
    }

    .primaryNav {
        ul[class='usa-nav__primary usa-accordion'] {
            margin-top: unset;
            flex-direction: column;
            display: flex;
        }
        a:hover {
            background-color: transparent !important;
        }
    }

    .subMenuContainer {
        ul {
            margin-top: 0.5rem !important;
            padding: 1rem;
            li {
                margin: 0;
            }
        }
    }
}

.landingPageHeading {
    background-color: custom.$mcr-cmsblue-dark;
    color: custom.$mcr-foundation-white;
    padding: 1rem 0;
    & h1,
    & h2 {
        display: flex;
        flex-flow: column;
        text-align: center;
        margin: 0;
    }
    & h1 {
        margin-bottom: 10px;
    }
}

.banner {
    background: custom.$mcr-cmsblue-base;
}

@include uswds.at-media-max('desktop') {
    .bannerContainer {
        padding-right: 1rem !important;
        padding-left: 1rem !important;
    }

    .bannerLogo :global(.usa-logo) {
        margin-left: 0 !important;
        margin-right: 0 !important;
    }
}

.bannerLogo {
    display: flex;
    flex-direction: row;
    align-items: center;
    text-decoration: none;

    .logoImg {
        border-right: 2px solid custom.$mcr-foundation-white;
        padding-right: 1rem;
    }

    span {
        margin-left: 1rem;
        color: custom.$mcr-foundation-white;
        height: 100%;
    }
}

.dashboardHeading {
    background-color: custom.$mcr-cmsblue-dark;
    color: custom.$mcr-foundation-white;
    padding-left: 0.5rem;
    & h1,
    div {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        font-size: 2rem;
        line-height: 0.3;
        font-weight: bold;
        > span {
            padding: 0 1rem;
        }
    }
    div {
        min-height: 5rem; // this ensures we don't collapse page heading when no text present
    }
    h1 {
        margin: 0;
    }
}
.stateRow,
.cmsRow {
    width: 100%;
    justify-content: space-between;
    align-items: center;

    h1 {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        margin-right: auto;
    }
}

.stateHeadingText {
    line-height: 34px;
    font-size: 28px;
}

.submissionIdLine {
    display: inline-flex;
    align-items: center;
    margin-top: 8px;
    font-size: 0.95rem;
    font-weight: 400;
}

.submissionIdLineDivider {
    color: custom.$mcr-periwinkle;
    margin-left: 0.3rem;
    margin-right: 0.3rem;
}

.submissionIdlabel {
    font-weight: 400;
}

.submissionIdDivider {
    opacity: 0.7;
}

.submissionIdValue {
    font-weight: 400;
}

.contractTypeContainer {
    margin-left: auto;
    display: flex;
    align-items: flex-start;
    gap: 0.75rem;
    font-size: 0.9rem;
    font-weight: 400;
    min-height: 1rem;
}

div div.contractTypeText {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    text-align: left;
    line-height: 1.2;
}

.dashboardHeading div.contractTypeContainer,
.dashboardHeading div.contractTypeText,
.dashboardHeading div.contractTypeDivider {
    min-height: 2rem;
}

.contractTypeDivider {
    width: 3px;
    height: 2.5rem;
    background-color: custom.$mcr-periwinkle;
    opacity: 0.8;
    position: relative;
    left: 15px;
}

.contractTypeLabel {
    font-size: 14.5px;
    line-height: 16px;
    font-weight: 400;
    margin-bottom: 0.15rem;
}

.contractTypeValue {
    font-size: 1rem;
    font-weight: bold;
    line-height: 23px;
}

